--- a/documentation/advanced/advanced-windows.asciidoc
+++ b/documentation/advanced/advanced-windows.asciidoc
@@ -68,7 +68,7 @@ For example:
 
 [source, java]
 ----
-@Theme("book-examples")
+@Theme("mytheme")
 public static class MyPopupUI extends UI {
     @Override
     protected void init(VaadinRequest request) {
@@ -149,8 +149,6 @@ browsing can open the window in another tab, depending on the browser settings.
 The URL path for a popup window UI is by default determined from the UI class
 name, by prefixig it with " [literal]#++popup/++#". For example, for the example
 UI giver earlier, the URL would be
-[literal]#++/book-examples/book/popup/MyPopupUI++#.
-
 
 
 [[advanced.windows.popup-closing]]
