--- a/documentation/migration/migrating-to-vaadin8.asciidoc
+++ b/documentation/migration/migrating-to-vaadin8.asciidoc
@@ -3,7 +3,7 @@
 == Migration from Framework 7 to Framework 8
 
 Most Vaadin Framework 7 applications will need some changes when migrating to Vaadin Framework 8.
-To make migration from version 7 to 8 as straightforward as possible, Vaadin Framework 8 ships with compatibility packages that include all the old features and API that have been changed between versions.
+To make migration from version 7 to 8 as straightforward as possible, Vaadin Framework 8 ships with compatibility packages that include all the old features and APIs that have changed between versions.
 
 The recommended migration path to take for any non-trivial Vaadin application is to first switch any incompatible components to using the APIs available in the compatibility packages, after which parts of the application can be migrated separately.
 This is primarily to get an existing Framework 7 project up and running with Framework 8 as quickly as possible, as well as to avoid having to switch to using completely new APIs throughout an entire project all at once.
@@ -11,7 +11,7 @@ This is primarily to get an existing Framework 7 project up and running with Fra
 === Updating Project Dependencies
 
 The very first step in migration is to ensure that your project is configured to use Framework 8 dependencies, as well as include any of the desired compatibility packages needed in your migration.
-Additionally, Framework 8 requires JDK 8 for development.
+Also note that Framework 8 requires JDK 8 for development.
 For deployment configurations, refer to the list of supported technologies in the release notes, available at link:https://vaadin.com/download/prerelease/8.0/8.0.0/8.0.0.beta1/release-notes.html#supportedversions[].
 
 ==== Updating Maven Dependencies
